--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "OONI Docs",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -7,13 +7,20 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sync-docs": "node src/scripts/sync.js"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/starlight": "^0.14.0",
+    "@astrojs/ts-plugin": "^1.3.1",
     "astro": "^3.2.3",
     "sharp": "^0.32.5",
     "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "adm-zip": "^0.5.10",
+    "axios": "^1.6.2",
+    "ts-node": "^10.9.1"
   }
 }
