--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "@astrojs/starlight": "^0.14.0",
     "@astrojs/ts-plugin": "^1.3.1",
     "astro": "^3.2.3",
+    "rehype-mermaid": "^2.0.1",
+    "rehype-stringify": "^10.0.0",
+    "remark": "^15.0.1",
+    "remark-rehype": "^11.0.0",
     "sharp": "^0.32.5",
+    "ts-dedent": "^2.2.0",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
