--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "npm run sync-docs && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "sync-docs": "node src/scripts/sync.js"
