--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "npm run sync-docs && astro check && astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "sync-docs": "node src/scripts/sync.js"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
-    "@astrojs/starlight": "^0.14.0",
+    "@astrojs/starlight": "^0.15.0",
     "@astrojs/ts-plugin": "^1.3.1",
-    "astro": "^3.2.3",
+    "astro": "^4.0.3",
     "sharp": "^0.32.5",
     "typescript": "^5.3.2"
   },
