--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "HOST=0.0.0.0 PORT=80 node dist/server/entry.mjs",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/node": "^7.0.0",
     "@astrojs/starlight": "^0.15.0",
     "@astrojs/ts-plugin": "^1.3.1",
     "astro": "^4.0.3",
