--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "HOST=0.0.0.0 node dist/server/entry.mjs",
+    "start": "node run.mjs",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -15,7 +15,10 @@
     "@astrojs/node": "^7.0.0",
     "@astrojs/starlight": "^0.15.0",
     "@astrojs/ts-plugin": "^1.3.1",
+    "@fastify/middie": "^8.3.0",
+    "@fastify/static": "^6.12.0",
     "astro": "^4.0.3",
+    "fastify": "^4.24.3",
     "sharp": "^0.32.5",
     "typescript": "^5.3.2"
   },
