--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "buildCommand": "npm run build-vercel"
+  "buildCommand": "npm run build",
+  "installCommand": "npm install && npx playwright install"
 }
