--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
-    "@astrojs/node": "^7.0.0",
-    "@astrojs/starlight": "^0.15.0",
+    "@astrojs/node": "^8.0.0",
+    "@astrojs/starlight": "^0.29.2",
     "@astrojs/ts-plugin": "^1.3.1",
     "@astrojs/vercel": "^6.0.1",
     "@fastify/middie": "^8.3.0",
     "@fastify/static": "^6.12.0",
-    "astro": "^4.0.3",
+    "astro": "^4.16.16",
     "fastify": "^4.24.3",
     "rehype-shikiji": "^0.10.0",
     "sharp": "^0.32.5",
+    "starlight-openapi": "^0.8.3",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
