--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fastify/static": "^6.12.0",
     "astro": "^4.16.16",
     "fastify": "^4.24.3",
+    "mermaid": "^11.4.1",
     "sharp": "^0.32.5",
     "starlight-openapi": "^0.8.3",
     "typescript": "^5.3.2"
